HW4.css
/*
Program Name: Aamir's HW 4
    Author Name: Aamir Rajab
    Date Created: 01/30/2026
    Date last Modified: 02/07/2026
    Version: 1.0
    Description: This is Aamir's CSS file for HW4
*/

header{
    position: sticky;
    top: 0;
    width: 100%;
    background-color: rgba(113, 176, 162, 0.445);
    transition: background-color 0.3s ease-in-out;
    z-index: 1000;
}
header.scrolled{
    background-color:rgba(203, 195, 154, 0.548);
    opacity: 1.0;
}

body{
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: rgba(209, 255, 243, 0.226);
    margin: 0;
    height: 100%;           
    min-height: 100vh; /*make sure page is height of the viewport*/

}

form{
    flex: grow 1;

}

h1{
    text-align: center;
    font-family: "Cooperplate", Georgia, 'Times New Roman', Times, serif;
    font-weight: lighter;
    flex: grow 1;;
}

h2{
    text-align: center;
    font-family: "Cooperplate", Georgia, 'Times New Roman', Times, serif;
    font-size: 3rem;
    font-weight: 400;
    flex-grow:1;
}

main{
    text-align: center;
    font-family: "Cooperplate", fantasy;
    font-weight: lighter;
    flex-grow: 1;
}

.image{
    text-align:left;
    height: 0%;
    mix-blend-mode: multiply;
}

.td1{
    text-align: right;
    font-family: "Optima", Arial, Helvetica, sans-serif;
    font-weight: lighter;

}

th{
    text-align: center;
    font-family: "Optima", Arial, Helvetica, sans-serif;
    font-weight: bold;
}

footer{
    bottom: 0%;
    width: 100%;
    background-color: rgba(65, 75, 66, 0.236);
    height:5%;
    margin-top: auto;
    padding: 30px 0;
}

#footer{
    text-align: right;
    font-family: "optima", sans-serif;
    font-weight: normal;
    margin-right: 10px;
}

label{
    text-align: right;
    font-family: "optima", sans-serif;
    font-weight: normal;
}

input{
    text-align: left;
    font-family: "optima", sans-serif;
    font-weight: normal;
}

textarea{
    text-align: left;
    font-family: "optima", sans-serif;
    font-weight: normal;
}

#today{
    text-align: left;
    font-family: "optima", sans-serif;
    font-weight: normal;
}

P{
    text-align: right;
    font-family: "optima", sans-serif;
    font-weight: normal;
}

.error {
    color: red;
    font-size: 12px;
    font-family: optima, sans-serif;
    font-weight:normal;
}

.pword-message {
    text-align: right;
    font-family: optima, sans-serif;
    font-weight: normal;
    position: relative;
    left: 100px;
    background: transparent;
    padding: 10px;
    border-spacing: 2px;
    border-radius: 20px;
    color: rgb(226, 43, 43);
}

#review {
    margin-top: 5px;
}

table.output,
tr.output,
td.output {
    width: 500px;
    background-color: rgba(26, 82, 185, 0.445);
    padding: 10px;
    border-spacing: 2px;
    border-radius: 20px;
    color: black;
}

td.output {
    width: 500px;
    background-color: rgba(19, 90, 220, 0.445);;
    padding: 10px;
    border-spacing: 2px;
}

#alert-box {
    display: none;
    position: fixed;
    z-index: 9999;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(29, 86, 166, 0.442);
}

#alert-content {
    background-color: white;
    border-radius: 10px;
    width: 300px;
    height: 135px;
    margin: auto;
    margin-top: 20px;
    padding: 30px;
    text-align: center;
}

/* Styles for alert content heading */
#alert-content h4 {
    margin-top: 20%;
    font-size: 20px;
    text-align: center;
    font-family: "optima", sans-serif;
    font-weight: normal;    
}

#close-alert {
    background-color: rgb(238, 231, 231);
    border-width: 1px;
    border-style: solid;
    color: rgba(29, 86, 166, 0.884);
    border-color: rgba(184, 143, 6, 0.815);
    font-size: 16px;
    font-weight: bold;
    height: 30px;
    width: 80px;
    border-radius: 40px;
    cursor: pointer;
    margin-top: 20px;
    text-align: center;
    font-family: "optima", sans-serif;
}

.pword-message {
    text-align: right;
    font-family: "optima", sans-serif;
    font-weight: normal;
    position: relative;
    left: 100px;
    background: solid;
    padding: 10px;
    border-spacing: 2px;
    border-radius: 20px;
    color: rgb(218, 20, 20);
}

table.output,
tr.output,
td.output {
    width: 400px;
    background-color: rgb(234, 183, 183);
    padding: 20px;
    border-spacing: 1px;
    border-radius: 20px;
    color: #d20f0f;
}

td.outputdata {
    padding: 12px;
    border: 1px solid rgb(35, 98, 125);
    background-color:rgb(178, 242, 15);
    font-family: "Arial", sans-serif;
    font-size: 14px;
    color: #3682a6;
}

.date-box {
    text-align: right;
    font-family: optima,san-serif;
    font-weight: normal;
    margin-right: 20px;
    margin-top: 5px;
    margin-bottom: 8px;
}

/*iframe styling*/ 
.iframe-container {
    positon: absolute
    top: 21%;
    right: -20px;
    width: 25%;
    height: 100;
    overflow: hidden;
    box-sizing: border-box;
    text-align: right;
    margin-right: 20px
    Margin-top: 10px;
}  

.iframe-container iframe {
    width: 95%;
    height: 20px;
    border: 4px solid rgb(144, 196, 198);
} 

/* Cookie welcome message styling */
#welcome {
    margin-top: 20px;
    font-size: 20px;
    text-align: center;
    font-family: "optima", sans-serif;
    font-weight: normal;
}

#welcome2 {
    margin-top: 20px;
    font-size: 20px;
    text-align: center;
    font-family: "optima", sans-serif;
    font-weight: normal;
}

